# Labyrinth

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
Core/: CMakeLists.txt
Core/include/Core/: Application.h  Camera.h  Event.h  Layer.h  Window.h
Core/include/Core/Events/: Event.h  KeyBoardEvents.h  KeyPressedEvent.h  MouseEvents.h
Core/include/Core/Renderer/: GLUtils.h  LightingManager.h  Mesh.h  Renderer.h  Shader.h
Core/src/Core/: Application.cpp  Camera.cpp  Window.cpp
Core/src/Core/Renderer/: GLUtils.cpp  LightingManager.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp
Game/: CMakeLists.txt
Game/include/: Ball.h  BallController.h  CameraController.h  CollisionElements.h  Colors.h  Cube.h  GameLayer.h  Maze.h  Object.h  Scene.h
Game/models/ball/: ball.mtl
Game/models/maze/: maze.mtl
Game/models/maze1/: maze1.mtl
Game/old-code/include/: camera.hpp  character.h  models.h  shader.h
Game/old-code/src-old/: game.cc  makefile  mesh.cpp
Game/old-code/src-old/shaders/: light.vs
Game/shaders/: fragment.glsl  vertex.glsl
Game/src/: Ball.cpp  BallController.cpp  CameraController.cpp  Cube.cpp  GameLayer.cpp  Main.cpp  Maze.cpp  Scene.cpp
img/: top
include/: camera.hpp  character.h  constants.h  filesystem.h  mesh.h  models.h
models/ball/: ball1.mtl
models/container/: container.mtl
models/disc/: disc2.mtl  disc3.mtl  three_towers.mtl
models/donut/: donut.mtl
models/earth/: earth.mtl
models/map/: map.mtl
models/maze1/: maze2.mtl
models/pipes/: pipes.mtl
models/temple/: red_roof.avif  temple (1).mtl  temple.mtl
src/: glad.c  main  main.cc  makefile  mesh.cpp  shader.cc  this.asm
src/shaders/: ball.fs  ball.vs  light.fs
